# ebpf-common

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  main.yml
cmake/: options.cmake  sanitizers.cmake  settings.cmake  utils.cmake
ebpf/: CMakeLists.txt
ebpf/include/tob/ebpf/: bpfmap.h  bpfsyscallinterface.h  bufferreader.h  cpu.h  ebpf_utils.h  feature_detect.h  iclangcompiler.h  ievent.h  illvmbridge.h  iperfevent.h  llvm_utils.h  perfeventarray.h  sectionmemorymanager.h  structure.h  tracepointdescriptor.h  tracepointevent.h  typedbpfmap.h  types.h
ebpf/src/: bpf_helpers.h  bpfsyscallinterface.cpp  bufferreader.cpp  clangcompiler.cpp  clangcompiler.h  clanginitializer.cpp  clanginitializer.h  cpu.cpp  ebpf_common_helpers.h  ebpf_utils.cpp  feature_detect.cpp  iclangcompiler.cpp  ievent.cpp  illvmbridge.cpp  iperfevent.cpp  kprobe_helpers.cpp  kprobe_helpers.h  kprobeevent.cpp  kprobeevent.h  kprobeperfevent.cpp  kprobeperfevent.h  llvm_utils.cpp  llvmbridge.cpp  llvmbridge.h  lsmevent.cpp  lsmevent.h  perfeventarray.cpp  rawtracepointevent.cpp  rawtracepointevent.h  sectionmemorymanager.cpp  tracepointdescriptor.cpp  tracepointevent.cpp  tracepointevent.h  tracepointperfevent.cpp  tracepointperfevent.h  uprobeevent.cpp  uprobeevent.h  uprobeperfevent.cpp  uprobeperfevent.h
error/: CMakeLists.txt
error/include/tob/error/: error.h  errorcode.h  erroror.h  errorstatus.h  namederror.h  stringerror.h  successor.h
libraries/: CMakeLists.txt
libraries/Catch2/: CMakeLists.txt
libraries/Clang/: CMakeLists.txt
libraries/LLVM/: CMakeLists.txt
libraries/btfparse/: CMakeLists.txt
libraries/libbpf/: CMakeLists.txt
tests/: bpfmap.cpp  erroror.cpp  llvm_utils.cpp  llvmbridge.cpp  sectionmemorymanager.cpp  tracepointdescriptor.cpp  tracepointevent.cpp  typedbpfmap.cpp  uniqueref.cpp
utils/: CMakeLists.txt
utils/include/tob/utils/: architecture.h  bufferreader.h  ielfimage.h  kernel.h  uniquefd.h  uniquemappedmemory.h  uniqueref.h
utils/src/: architecture.cpp  bufferreader.cpp  elfimage.cpp  elfimage.h  kernel.cpp  uniquefd.cpp  uniquemappedmemory.cpp
